syntax = "proto3";

package wres.statistics.generated;

option java_package = "wres.statistics.generated";
option java_outer_classname = "GeometryProto";
option java_multiple_files = true;

message Geometry
{
    /*Elementary representation of a geometry with geographic points expressed 
    as latitude/longitude pairs on the World Geodetic System 1984 (WGS84) 
    reference ellipsoid. */

    double latitude = 1;
    // WGS84 latitude.
    
    double longitude= 2;
    // WGS84 longitude.
    
    string name = 3;
    /*User-friendly name for all sides of a pairing or the left side only if 
    other sides are defined. (e.g. DRRC2).*/
    
    string right_name = 4;
    /*The name of the geometry used on the right side of a pairing when 
    different geometries have been correlated or cross-walked.*/
    
    string baseline_name = 5;
    /*The name of the geometry used on the baseline side of a pairing when 
    different geometries have been correlated or cross-walked.*/
}